# otus_hw_09

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  bintray-descriptor.in.json  conanfile.txt
include/: file_descriptor.h  files_comparator.h  files_comparator_impl.h  iobserver.h  scanner.h
src/: files_comparator.cpp  main.cpp  scanner.cpp
tests/: test_comparator.cpp  test_comparator_impl.cpp  test_descriptor.cpp  test_scanner.cpp
